--- a/config/crd/bases/petasus.io_acceleratorconfigs.yaml
+++ b/config/crd/bases/petasus.io_acceleratorconfigs.yaml
@@ -43,10 +43,176 @@ spec:
           spec:
             description: AcceleratorConfigSpec defines the desired state of AcceleratorConfig
             properties:
-              foo:
-                description: Foo is an example field of AcceleratorConfig. Edit acceleratorconfig_types.go
-                  to remove/update
-                type: string
+              providers:
+                description: ProvidersSpec defines each providers' component configurations
+                properties:
+                  rebellions:
+                    description: |-
+                      Nvidia *nvidiav1.ClusterPolicySpec `json:"nvidia,omitempty"`
+                      Rebellions npu configuration
+                    properties:
+                      daemonsets:
+                        description: Daemonsets defines common configurations for
+                          rebellions daemonsets
+                        properties:
+                          annotations:
+                            additionalProperties:
+                              type: string
+                            description: Set annotations
+                            type: object
+                          labels:
+                            additionalProperties:
+                              type: string
+                            description: Set labels
+                            type: object
+                          priorityClassName:
+                            type: string
+                          tolerations:
+                            description: Set tolerations
+                            items:
+                              description: |-
+                                The pod this Toleration is attached to tolerates any taint that matches
+                                the triple <key,value,effect> using the matching operator <operator>.
+                              properties:
+                                effect:
+                                  description: |-
+                                    Effect indicates the taint effect to match. Empty means match all taint effects.
+                                    When specified, allowed values are NoSchedule, PreferNoSchedule and NoExecute.
+                                  type: string
+                                key:
+                                  description: |-
+                                    Key is the taint key that the toleration applies to. Empty means match all taint keys.
+                                    If the key is empty, operator must be Exists; this combination means to match all values and all keys.
+                                  type: string
+                                operator:
+                                  description: |-
+                                    Operator represents a key's relationship to the value.
+                                    Valid operators are Exists and Equal. Defaults to Equal.
+                                    Exists is equivalent to wildcard for value, so that a pod can
+                                    tolerate all taints of a particular category.
+                                  type: string
+                                tolerationSeconds:
+                                  description: |-
+                                    TolerationSeconds represents the period of time the toleration (which must be
+                                    of effect NoExecute, otherwise this field is ignored) tolerates the taint. By default,
+                                    it is not set, which means tolerate the taint forever (do not evict). Zero and
+                                    negative values will be treated as 0 (evict immediately) by the system.
+                                  format: int64
+                                  type: integer
+                                value:
+                                  description: |-
+                                    Value is the taint value the toleration matches to.
+                                    If the operator is Exists, the value should be empty, otherwise just a regular string.
+                                  type: string
+                              type: object
+                            type: array
+                        type: object
+                      devicePlugin:
+                        description: DevicePlugin component spec
+                        properties:
+                          enabled:
+                            type: boolean
+                        required:
+                        - enabled
+                        type: object
+                      driver:
+                        description: Driver spec
+                        properties:
+                          enabled:
+                            type: boolean
+                        required:
+                        - enabled
+                        type: object
+                      metricExporter:
+                        description: MetricExporter spec
+                        properties:
+                          enabled:
+                            type: boolean
+                        required:
+                        - enabled
+                        type: object
+                      nfd:
+                        description: NPUFeatureDiscovery spec
+                        properties:
+                          enabled:
+                            type: boolean
+                        required:
+                        - enabled
+                        type: object
+                      vfioManager:
+                        description: VFIOManager component spec
+                        properties:
+                          enabled:
+                            description: Flag which indicates deploying VFIO Manager
+                              with operator is enabled
+                            type: boolean
+                          env:
+                            description: additional container environments
+                            items:
+                              properties:
+                                name:
+                                  description: Name of the environment variable.
+                                  type: string
+                                value:
+                                  description: Value of the environment variable.
+                                  type: string
+                              required:
+                              - name
+                              type: object
+                            type: array
+                          image:
+                            description: VFIO manager container image
+                            properties:
+                              imagePullPolicy:
+                                description: Image pull policy
+                                type: string
+                              imagePullSecrets:
+                                description: Image pull secrets
+                                items:
+                                  type: string
+                                type: array
+                              name:
+                                description: Image name
+                                pattern: '[a-zA-Z0-9\-]+'
+                                type: string
+                              registry:
+                                description: Image registry
+                                type: string
+                              tag:
+                                description: Image tag
+                                type: string
+                            type: object
+                          resources:
+                            description: container resource spec
+                            properties:
+                              limits:
+                                additionalProperties:
+                                  anyOf:
+                                  - type: integer
+                                  - type: string
+                                  pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                                  x-kubernetes-int-or-string: true
+                                description: Limits describes the maximum amount of
+                                  compute resources allowed.
+                                type: object
+                              requests:
+                                additionalProperties:
+                                  anyOf:
+                                  - type: integer
+                                  - type: string
+                                  pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                                  x-kubernetes-int-or-string: true
+                                description: Requests describes the minimum amount
+                                  of compute resources required.
+                                type: object
+                            type: object
+                        required:
+                        - enabled
+                        type: object
+                    type: object
+                type: object
+            required:
+            - providers
             type: object
           status:
             description: AcceleratorConfigStatus defines the observed state of AcceleratorConfig
